--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact – Khotwa</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <style>
-    .contact-grid {
+    .contact-section {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
       display: grid;
+      grid-template-columns: 1fr;
       gap: 2rem;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      margin-top: 2rem;
     }
-
-    .contact-info {
-      text-align: left;
+    @media(min-width: 768px) {
+      .contact-section { grid-template-columns: 1fr 1fr; }
     }
-
-    .contact-info h3 {
-      margin-bottom: 1rem;
+    .info { padding: 1rem; }
+    .contact-form { background: var(--card-bg); padding: 1.8rem; border-radius: 10px; box-shadow: 0 2px 12px rgba(0,0,0,0.1);}
+    .contact-form .form-group { position: relative; margin-bottom: 1.2rem; }
+    .contact-form input, .contact-form textarea {
+      width: 100%; padding: 0.85rem 1rem 0.85rem 2.8rem;
+      font-size: 1rem; border-radius: 6px; border: 1px solid #ccc;
+      background: var(--bg); color: var(--text);
     }
-
-    .contact-info p {
-      margin-bottom: 0.7rem;
+    .contact-form .material-symbols-outlined {
+      position: absolute; left: 10px; top: 50%; transform: translateY(-50%); color: #888; font-size: 1.3rem;
     }
-
-    .form-section {
-      background-color: var(--card-bg);
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    .contact-form button {
+      width: 100%; padding: 0.9rem;
+      background: var(--btn-bg); color: var(--btn-text);
+      border: none; border-radius: 6px; cursor: pointer;
     }
-
-    .success-msg {
-      margin-top: 1rem;
-      color: green;
-      text-align: center;
-      display: none;
+    .contact-form button:hover {
+      background: var(--green);
     }
+    .toast {
+      position: fixed; top: 1rem; right: 1rem;
+      background: var(--green); color: var(--white);
+      padding: 0.8rem 1.4rem; border-radius: 5px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      opacity: 0; pointer-events: none;
+      transition: opacity 0.4s ease;
+    }
+    .toast.show { opacity: 1; pointer-events: auto; }
   </style>
 </head>
 <body>
@@ -58,28 +66,34 @@
   </nav>
 </header>
 
-<section class="section" data-aos="fade-up">
-  <h2>Contact Us</h2>
-
-  <div class="contact-grid">
-    <div class="contact-info">
-      <h3>Reach Out</h3>
-      <p>📧 Email: support@khotwa.edu</p>
-      <p>📞 Phone: +966 555 123 456</p>
-      <p>📍 Location: University Campus, Building B</p>
-    </div>
-
-    <div class="form-section">
-      <form id="contactForm">
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Your Email" required />
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-        <div class="success-msg" id="successMsg">✅ Message sent successfully!</div>
-      </form>
-    </div>
+<section class="section contact-section" data-aos="fade-up">
+  <div class="info">
+    <h2>Contact Information</h2>
+    <p><strong>Email:</strong> support@khotwa.edu</p>
+    <p><strong>Phone:</strong> +966 555 123 456</p>
+    <p><strong>Location:</strong> University Campus, Bldg. B</p>
+  </div>
+  <div class="contact-form">
+    <h2>Send a Message</h2>
+    <form id="contactForm">
+      <div class="form-group">
+        <span class="material-symbols-outlined">person</span>
+        <input type="text" name="name" placeholder="Your Name" required/>
+      </div>
+      <div class="form-group">
+        <span class="material-symbols-outlined">mail</span>
+        <input type="email" name="email" placeholder="Email Address" required/>
+      </div>
+      <div class="form-group">
+        <span class="material-symbols-outlined">message</span>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      </div>
+      <button type="submit">Send Message</button>
+    </form>
   </div>
 </section>
+
+<div id="toast" class="toast">✅ Message sent successfully!</div>
 
 <footer class="footer" data-aos="fade-up">
   <p>© 2025 Khotwa Student Council</p>
@@ -89,11 +103,22 @@
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
   AOS.init({ duration: 700, once: true });
-
-  document.getElementById('contactForm').addEventListener('submit', function(e) {
+  const form = document.getElementById('contactForm');
+  const toast = document.getElementById('toast');
+  form.addEventListener('submit', function(e){
     e.preventDefault();
-    document.getElementById('successMsg').style.display = 'block';
-    this.reset();
+    const data = {
+      name: form.name.value.trim(),
+      email: form.email.value.trim(),
+      message: form.message.value.trim(),
+      date: new Date().toISOString()
+    };
+    const arr = JSON.parse(localStorage.getItem('contacts')|| '[]');
+    arr.push(data);
+    localStorage.setItem('contacts', JSON.stringify(arr));
+    form.reset();
+    toast.classList.add('show');
+    setTimeout(()=> toast.classList.remove('show'), 3000);
   });
 </script>
 </body>
