--- a/admin.html
+++ b/admin.html
@@ -1,90 +1,153 @@
-<script>
-  if (localStorage.getItem('isLogged') !== 'true') {
-    alert('You must log in first!');
-    location.href = 'login.html';
-  }
-</script>
-
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Advanced Admin Panel – Khotwa</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Dashboard – Khotwa</title>
+  <link rel="stylesheet" href="styles.css"/>
   <style>
-    .stats-cards { display: flex; gap: 1rem; flex-wrap: wrap; margin-bottom: 2rem; }
-    .stat-card { flex: 1; min-width: 180px; background: var(--card-bg); padding: 1.2rem; border-radius: 8px;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.1); position: relative; }
-    .stat-card h3 { margin: 0; font-size: 1rem; color: var(--text); }
-    .stat-card p { font-size: 2rem; margin: 0.5rem 0; color: var(--btn-bg); }
-    .chart-container { max-width: 600px; margin: auto 0 2rem; padding: 1rem; background: var(--card-bg);
-      border-radius: 8px; box-shadow: 0 1px 6px rgba(0,0,0,0.1); }
+    .toast {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      background: var(--green);
+      color: #fff;
+      padding: 0.7rem 1.3rem;
+      border-radius: 6px;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.4s ease;
+      z-index: 999;
+    }
+    .toast.show {
+      opacity: 1;
+      pointer-events: auto;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="logo">KHOTWA ADMIN</div>
-    <nav class="nav-container">
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="admin.html">Admin</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="profile.html">Profile</a></li>
-      </ul>
-      <button id="darkToggle" class="dark-btn">🌓</button>
-    </nav>
-  </header>
+<script>
+  // حماية الصفحة
+  if (localStorage.getItem("isLogged") !== "true" && localStorage.getItem("rememberMe") !== "true") {
+    alert("You must log in first!");
+    location.href = "login.html";
+  }
+</script>
 
-  <section class="section">
-    <div class="dashboard-header">
-      <h2>لوحة تحكم متقدمة</h2>
-      <p>إحصائيات وتقارير لمستخدمي المنصة</p>
-    </div>
+<!-- Navbar -->
+<header class="navbar">
+  <div class="logo">KHOTWA ADMIN</div>
+  <nav class="nav-container">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="admin.html">Admin</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="profile.html">Profile</a></li>
+    </ul>
+    <button id="darkToggle" class="dark-btn">🌓</button>
+  </nav>
+</header>
 
-    <!-- إحصائيات -->
-    <div class="stats-cards">
-      <div class="stat-card"><h3>Users</h3><p id="countUsers">--</p></div>
-      <div class="stat-card"><h3>Events</h3><p id="countEvents">--</p></div>
-      <div class="stat-card"><h3>Messages</h3><p id="countMessages">--</p></div>
-    </div>
+<section class="section">
+  <h2>لوحة التحكم</h2>
 
-    <!-- Chart -->
-    <div class="chart-container">
-      <canvas id="userGrowthChart"></canvas>
-    </div>
+  <div class="admin-controls">
+    <button onclick="addRow()">➕ إضافة مستخدم</button>
+  </div>
 
-    <!-- Filter + Controls + Table -->
-    <div class="filter-bar">
-      <input type="text" id="searchInput" placeholder="🔍 Search name or email..." onkeyup="searchTable()" />
-      <div class="admin-controls">
-        <button onclick="addRow()">➕ Add User</button>
-      </div>
-    </div>
+  <div class="table-container">
+    <table class="admin-table">
+      <thead>
+        <tr>
+          <th>الرقم</th>
+          <th>الاسم</th>
+          <th>البريد الإلكتروني</th>
+          <th>الدور</th>
+          <th>إجراءات</th>
+        </tr>
+      </thead>
+      <tbody id="adminTableBody"></tbody>
+    </table>
+  </div>
+</section>
 
-    <div class="table-container">
-      <table class="admin-table">
-        <thead>
-          <tr>
-            <th>#</th><th>Name</th><th>Email</th><th>Role</th><th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="adminTableBody"></tbody>
-      </table>
-    </div>
-  </section>
+<footer class="footer">
+  <p>© 2025 Khotwa Student Council</p>
+</footer>
 
-  <footer class="footer">
-    <p>© 2025 Khotwa Student Council</p>
-  </footer>
+<!-- Toast -->
+<div id="toast" class="toast"></div>
 
-  <!-- Chart.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
- <script src="main.js"></script>
-  <script src="admin_advanced.js"></script>
+<script>
+  const users = [
+    { name: "أحمد محمد", email: "ahmad@email.com", role: "عضو" },
+    { name: "سارة العتيبي", email: "sarah@email.com", role: "قائدة" }
+  ];
+
+  function refreshUI() {
+    const tbody = document.getElementById("adminTableBody");
+    tbody.innerHTML = "";
+    users.forEach((user, i) => {
+      tbody.innerHTML += `
+        <tr>
+          <td>${i + 1}</td>
+          <td>${user.name}</td>
+          <td>${user.email}</td>
+          <td>${user.role}</td>
+          <td>
+            <button onclick="editRow(${i})">✏️</button>
+            <button onclick="deleteRow(${i})">🗑️</button>
+          </td>
+        </tr>
+      `;
+    });
+  }
+
+  function showToast(msg) {
+    const toast = document.getElementById("toast");
+    toast.innerText = msg;
+    toast.classList.add("show");
+    setTimeout(() => {
+      toast.classList.remove("show");
+    }, 3000);
+  }
+
+  function addRow() {
+    const name = prompt("Name:");
+    const email = prompt("Email:");
+    const role = prompt("Role:");
+    if (name && email && role) {
+      users.push({ name, email, role });
+      refreshUI();
+      showToast("✅ User added");
+    }
+  }
+
+  function deleteRow(i) {
+    if (confirm("Are you sure you want to delete this user?")) {
+      users.splice(i, 1);
+      refreshUI();
+      showToast("🗑️ User deleted");
+    }
+  }
+
+  function editRow(i) {
+    const user = users[i];
+    const name = prompt("New name:", user.name);
+    const email = prompt("New email:", user.email);
+    const role = prompt("New role:", user.role);
+    if (name && email && role) {
+      users[i] = { name, email, role };
+      refreshUI();
+      showToast("✏️ User updated");
+    }
+  }
+
+  window.addEventListener("DOMContentLoaded", refreshUI);
+</script>
+<script src="dark-toggle.js"></script>
 </body>
 </html>
