--- a/login.html
+++ b/login.html
@@ -17,9 +17,15 @@
     }
     .login-card h2 { text-align: center; margin-bottom: 1.5rem; }
     .login-card input {
-      width: 100%; padding: 0.8rem; margin: 1rem 0;
+      width: 100%; padding: 0.8rem; margin: 1rem 0 0.5rem;
       border: 1px solid #ccc; border-radius: 6px;
       background: var(--bg); color: var(--text);
+    }
+    .login-card label {
+      display: flex;
+      align-items: center;
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
     }
     .login-card button {
       width: 100%; padding: 0.9rem;
@@ -49,6 +55,7 @@
     <form id="loginForm">
       <input type="email" name="email" placeholder="Email Address" required />
       <input type="password" name="password" placeholder="Password" required />
+      <label><input type="checkbox" name="remember" /> Remember Me</label>
       <button type="submit">Sign In</button>
     </form>
   </div>
@@ -67,12 +74,14 @@
     e.preventDefault();
     const email = this.email.value.trim().toLowerCase();
     const pwd = this.password.value.trim();
+    const remember = this.remember.checked;
 
-    // بيانات دخول تجريبية — يمكن تطويرها لاحقًا
     if (email === 'admin@khotwa.com' && pwd === 'admin123') {
       localStorage.setItem('isLogged', 'true');
+      if (remember) localStorage.setItem('rememberMe', 'true');
+      else localStorage.removeItem('rememberMe');
       alert('Login successful!');
-      location.href = 'index.html';
+      location.href = 'admin.html';
     } else {
       alert('Invalid credentials ❌');
     }
