--- a/login.html
+++ b/login.html
@@ -41,9 +41,8 @@
 <header class="navbar" data-aos="fade-down">
   <div class="logo">KHOTWA</div>
   <nav class="nav-container">
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="register.html">Register</a></li>
+    <ul class="nav-links" id="authLinks">
+      <!-- login/logout dynamic -->
     </ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
   </nav>
