--- a/index.html
+++ b/index.html
@@ -9,100 +9,85 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <header class="navbar" data-aos="fade-down">
-    <div class="logo">KHOTWA COUNCIL</div>
-    <nav class="nav-container">
-      <ul class="nav-links" id="navLinks">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="admin.html">Admin</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li id="loginItem"><a href="login.html">Login</a></li>
-        <li id="logoutItem" style="display: none;"><a href="#" onclick="logout()">Logout</a></li>
-      </ul>
-      <button id="darkToggle" class="dark-btn">🌓</button>
-    </nav>
-  </header>
-
-  <!-- Hero -->
-  <section id="home" class="hero" data-aos="fade-up" data-aos-delay="200">
-    <div class="hero-content">
-      <h1>Welcome to <span class="text-green">Khotwa</span></h1>
-      <p>Empowering student voice. Leading with impact.</p>
-      <a href="#about" class="primary-btn">Explore Khotwa</a>
-    </div>
-  </section>
-
-  <!-- About -->
-  <section id="about" class="section about-section" data-aos="fade-right" data-aos-delay="300">
-    <div class="about-text">
-      <h2>Who Are We?</h2>
-      <p>Khotwa bridges students and leadership. We empower, represent, connect.</p>
-    </div>
-    <div class="about-image">
-      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo"/>
-    </div>
-  </section>
-
-  <!-- Impact Stats -->
-  <section class="section stats" data-aos="zoom-in" data-aos-delay="400">
-    <h2>Our Impact</h2>
-    <div class="stats-grid">
-      <div class="stat-card"><h3>👥 150+</h3><p>Members</p></div>
-      <div class="stat-card"><h3>📚 25+</h3><p>Events</p></div>
-      <div class="stat-card"><h3>📈 4 Years</h3><p>Growth</p></div>
-    </div>
-  </section>
-
-  <!-- Upcoming Events -->
-  <section id="events" class="section" data-aos="fade-up" data-aos-delay="500">
-    <h2>Upcoming Events</h2>
-    <ul class="event-cards">
-      <li class="card-event" data-aos="fade-up">
-        <img src="images/event1.jpg" alt="Orientation"/>
-        <h3>Orientation Week</h3>
-        <p>Welcome new students to the journey.</p>
-      </li>
-      <li class="card-event" data-aos="fade-up" data-aos-delay="100">
-        <img src="images/event2.jpg" alt="Tech Talk"/>
-        <h3>Tech Talk</h3>
-        <p>AI, Web & Innovation session.</p>
-      </li>
+<!-- Navbar -->
+<header class="navbar" data-aos="fade-down">
+  <div class="logo">KHOTWA COUNCIL</div>
+  <nav class="nav-container">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="admin.html">Admin</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="profile.html">Profile</a></li>
     </ul>
-  </section>
+    <ul class="nav-links" id="authLinks"></ul>
+    <button id="darkToggle" class="dark-btn">🌓</button>
+  </nav>
+</header>
 
-  <!-- Contact Preview -->
-  <section id="contact" class="section" data-aos="fade-up" data-aos-delay="600">
-    <h2>Contact Us</h2>
-    <a href="contact.html" class="primary-btn">Get In Touch</a>
-  </section>
+<!-- Hero -->
+<section id="home" class="hero" data-aos="fade-up">
+  <div class="hero-content">
+    <h1>Welcome to <span class="text-green">Khotwa</span></h1>
+    <p>Empowering student voice. Leading with impact.</p>
+    <a href="#about" class="primary-btn">Explore Khotwa</a>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer" data-aos="fade-up">
-    <p>© 2025 Khotwa Student Council. All rights reserved.</p>
-  </footer>
+<!-- About -->
+<section id="about" class="section about-section" data-aos="fade-right">
+  <div class="about-text">
+    <h2>Who Are We?</h2>
+    <p>Khotwa bridges students and leadership. We empower, represent, connect.</p>
+  </div>
+  <div class="about-image">
+    <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo"/>
+  </div>
+</section>
 
-  <!-- Scripts -->
-  <script src="main.js"></script>
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({ duration: 800, once: true });
+<!-- Stats -->
+<section class="section stats" data-aos="zoom-in">
+  <h2>Our Impact</h2>
+  <div class="stats-grid">
+    <div class="stat-card"><h3>👥 150+</h3><p>Members</p></div>
+    <div class="stat-card"><h3>📚 25+</h3><p>Events</p></div>
+    <div class="stat-card"><h3>📈 4 Years</h3><p>Growth</p></div>
+  </div>
+</section>
 
-    // Login status check
-    window.addEventListener("DOMContentLoaded", () => {
-      const loggedIn = localStorage.getItem("isLogged") === "true";
-      document.getElementById("loginItem").style.display = loggedIn ? "none" : "inline-block";
-      document.getElementById("logoutItem").style.display = loggedIn ? "inline-block" : "none";
-    });
+<!-- Events -->
+<section id="events" class="section" data-aos="fade-up">
+  <h2>Upcoming Events</h2>
+  <ul class="event-cards">
+    <li class="card-event">
+      <img src="images/event1.jpg" alt="Orientation"/>
+      <h3>Orientation Week</h3>
+      <p>Welcome new students to the journey.</p>
+    </li>
+    <li class="card-event">
+      <img src="images/event2.jpg" alt="Tech Talk"/>
+      <h3>Tech Talk</h3>
+      <p>AI, Web & Innovation session.</p>
+    </li>
+  </ul>
+</section>
 
-    function logout() {
-      localStorage.removeItem("isLogged");
-      alert("Logged out successfully");
-      location.reload();
-    }
-  </script>
+<!-- Contact -->
+<section id="contact" class="section" data-aos="fade-up">
+  <h2>Contact Us</h2>
+  <a href="contact.html" class="primary-btn">Get In Touch</a>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+  <p>© 2025 Khotwa Student Council. All rights reserved.</p>
+</footer>
+
+<script src="main.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({ duration: 800, once: true });
+</script>
 </body>
 </html>
