--- a/profile.html
+++ b/profile.html
@@ -1,60 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Profile – Khotwa</title>
   <link rel="stylesheet" href="styles.css"/>
   <style>
-    .profile-container {
-      max-width: 500px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background-color: var(--card-bg);
-      border-radius: 10px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
-    }
-    .profile-container h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-    }
-    .profile-info p {
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
-      color: var(--text);
-    }
-    .logout-btn {
-      display: block;
-      margin: 2rem auto 0;
-      padding: 0.8rem 2rem;
-      border: none;
-      background-color: var(--btn-bg);
-      color: var(--btn-text);
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .logout-btn:hover {
-      background-color: var(--green);
-    }
+    .profile-container{max-width:500px;margin:3rem auto;padding:2rem;background:var(--card-bg);border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.1);}
+    .profile-container h2{text-align:center;margin-bottom:1.5rem;}
+    .profile-info p{font-size:1.1rem;margin-bottom:1rem;color:var(--text);}
+    .logout-btn{display:block;margin:2rem auto 0;padding:0.8rem 2rem;border:none;background:var(--btn-bg);color:var(--btn-text);font-weight:bold;border-radius:5px;cursor:pointer;}
+    .logout-btn:hover{background:var(--green);}
   </style>
 </head>
 <body>
-
-<!-- ✅ حماية -->
 <script>
-  if (localStorage.getItem("isLogged") !== "true" && localStorage.getItem("rememberMe") !== "true") {
-    alert("You must log in first!");
-    location.href = "login.html";
-  }
+  if(localStorage.getItem('isLogged')!=='true'&&localStorage.getItem('rememberMe')!=='true'){alert('You must log in first!');location.href='login.html';}
 </script>
 
 <header class="navbar">
   <div class="logo">KHOTWA</div>
   <nav class="nav-container">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="admin.html">Admin</a></li>
+      <li><a href="index.html">Home</a></li><li><a href="admin.html">Admin</a></li>
     </ul>
     <ul class="nav-links" id="authLinks"></ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
@@ -64,21 +31,14 @@
 <section class="profile-container">
   <h2>Welcome Back 👋</h2>
   <div class="profile-info">
-    <p><strong>Name:</strong> <span id="name">-</span></p>
-    <p><strong>Email:</strong> <span id="email">-</span></p>
-    <p><strong>Role:</strong> <span id="role">Admin</span></p>
+    <p><strong>Name:</strong> <span id="name">Administrator</span></p>
+    <p><strong>Email:</strong> <span id="email">admin@khotwa.com</span></p>
+    <p><strong>Role:</strong> Admin</p>
   </div>
   <button id="logoutBtn" class="logout-btn">Logout</button>
 </section>
 
-<footer class="footer">
-  <p>© 2025 Khotwa Student Council</p>
-</footer>
-
+<footer class="footer"><p>© 2025 Khotwa Student Council</p></footer>
 <script src="main.js"></script>
-<script>
-  document.getElementById("name").textContent = "Administrator";
-  document.getElementById("email").textContent = "admin@khotwa.com";
-</script>
 </body>
 </html>
